RX 7000 series zero RPM control non-existent
Describe the problem
Zero RPM/fan stop cannot be controlled for RX 7000 series even on the very latest bleeding edge AMDGPU kernel driver and firmware blobs. It is supported in the Windows 11 Adrenalin driver package through a GUI toggle.
Describe the new feature behavior
The kernel driver and firmware should expose the necessary functionality for setting the fan spin criteria. Example: Setting a minimum RPM or % of fan speed like in the fan_curve kernel interface that the GPU should always run at, or the minimum temperature in Celcius for the fans to start spinning, or just an ON/OFF toggle like Windows Adrenalin.
Describe the target user/application
Some users may feel uncomfortable knowing the GPU is running at a higher temperature indefinitely in idle scenarios as much as the GFX card ODM has validated under its own unknown criteria, instead of having the freedom and peace-of-mind of setting a non-zero constant fan speed.
Thus RDNA3 users with 0rpm-enabled gfx cards would stand to benefit from additional control over the fan spin/stop criteria.
How do you plan to validate this feature
I would use that kernel interface directly initially and then automatically through a userspace app once that gets made.
Business case
This functionally may improve GPU lifespan long-term at the expense of the fans', which is an arguably logical tradeoff. This would also cross off a parity issue with Windows Adrenalin drivers.